--- a/html-css-1/style.css
+++ b/html-css-1/style.css
@@ -89,8 +89,8 @@ header{
 .orange{
     width:40vw;
     height: 20vw;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
     background-color: orange;
 
 }
@@ -119,7 +119,7 @@ header{
 }
 
 #middle{
-    justify-content: space-around;
+    justify-content: center;
     margin-top: 40px;
 }
 
@@ -130,6 +130,7 @@ header{
 
 footer{
     background-color: indigo;
-    min-height: 50px;
-    position: relative;
+    position: absolute;
+    bottom: 0;
+    height: 50px;
 }
